--- a/final-project/first-style.css
+++ b/final-project/first-style.css
@@ -17,12 +17,45 @@ h1{
   right: 100px;
   top: 1px;  
 }
+.hovertext {
+  position: relative;
+  margin-left: 20px;
+  margin-right: 100px;
+  top: 230px; 
+  border-bottom: 1px dotted rgb(255, 255, 255);
+  font-size: 15px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.hovertext:before {
+  content: attr(data-hover);
+  visibility: hidden;
+  opacity: 0;
+  width: 140px;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 0;
+  transition: opacity 1s ease-in-out;
+
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 110%;
+}
+
+.hovertext:hover:before {
+  opacity: 1;
+  visibility: visible;
+}
 #canvasContainer {
  position: absolute;
- left: 130px;
+ left: 158px;
  right: 100px;
- top: 100px;
+ top: 8px;
  bottom: 10px;
 } 
 p{
