--- a/final-project/first-style.css
+++ b/final-project/first-style.css
@@ -1,6 +1,6 @@
 html, body {
   background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgb(60, 150, 0) 0%, rgb(9, 255, 0) 35%, rgb(217, 255, 0) 100%);
+  background: linear-gradient(90deg, rgb(6, 37, 35) 0%, rgba(9,9,121,1) 35%, rgb(71, 2, 25) 100%);
   margin: 0;
   padding: 0;
 }
@@ -19,7 +19,7 @@ h1{
 }
 .hovertext {
   position: relative;
-  margin-left: 20px;
+  margin-left: 40px;
   margin-right: 100px;
   top: 230px; 
   border-bottom: 1px dotted rgb(255, 255, 255);
@@ -70,7 +70,18 @@ h2{
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
-  margin-left: 20px;
+  margin-left: 40px;
   margin-right: 100px;
   margin-top: 40px;   
 }
+.instructions {
+  position: absolute;
+  margin-left: -210px;
+  margin-top: 225px;
+}
+.return{
+  position: absolute;
+  margin-left: -210px;
+  margin-top: -35px;
+}
+
